fixed too light words

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -841,7 +841,7 @@ h6 a {
   }
 }
 .case .sec-t p {
-  color: #bbb;
+  color: #777;
   font-size: 19px;
   font-style: normal;
   font-weight: 700;
@@ -917,7 +917,7 @@ h6 a {
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  color: #bbb;
+  color: #777;
 }
 @media only screen and (max-width: 767px) {
   .case-single p {
